--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
+    
 </head>
 <body>
     <script type="text/javascript">
-    document.write("Name-Racheal Adjei-Dubi")    
-    document.write("height-1.57in")
-    document.write("Country - Ghana")
+    document.write("Racheal Adjei-Dubi,    ")    
 
+    document.write("5.7,     ")
 
+    document.write("Ghana, ")
     </script>
 </body>
 </html>
